# turm

./: .gitignore  BRIEF  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  install.sh  release.toml
.github/workflows/: ci.yml  release.yml
custerm-cli/: Cargo.toml
custerm-cli/src/: client.rs  commands.rs  main.rs  update.rs
custerm-core/src/: config.rs  protocol.rs  pty.rs
custerm-core/tests/: socket_protocol.rs
custerm-linux/: Cargo.toml  custerm.desktop  install.sh
custerm-linux/src/: app.rs  dbus.rs  main.rs  panel.rs  search.rs  socket.rs  split.rs  tabs.rs  terminal.rs  webview.rs  window.rs
docs/: INDEX.md  architecture.md  cli.md  config.md  core-lib.md  decisions.md  kb-protocol.md  linux-app.md  macos-app.md  macos-parity-plan.md  plugins.md  roadmap.md  service-plugins.md  troubleshooting.md  workflow-runtime.md
examples/plugins/bookmark/: plugin.toml
examples/plugins/discord/: panel.html  plugin.toml  triggers.example.toml
examples/plugins/echo/: plugin.toml
examples/plugins/git/: plugin.toml  triggers.example.toml
examples/plugins/jira/: plugin.toml
examples/plugins/llm/: plugin.toml  triggers.example.toml
examples/plugins/slack/: panel.html  plugin.toml  triggers.example.toml
examples/plugins/todo/: panel.html  plugin.toml  triggers.example.toml
examples/triggers/: hyprland-webkit-fix.toml  vision-flow-3.toml
nestty-cli/src/: commands.rs
nestty-cli/src/plugin_cmds/: context.rs  git.rs  mod.rs  todo.rs
nestty-core/src/: action_registry.rs  condition.rs  context.rs  fs_atomic.rs  plugin.rs
nestty-linux/: com.marshall.nestty.desktop  install.sh
nestty-linux/src/: app.rs  background.rs  plugin_panel.rs  service_supervisor.rs  statusbar.rs  tabs.rs  terminal.rs  trigger_sink.rs  window.rs
nestty-macos/: run.sh
nestty-macos/Resources/: AppIcon.icns
nestty-plugin-jira/: Cargo.toml
nestty-plugin-jira/src/: config.rs  jira.rs  main.rs  store.rs
plugins/bookmark/: Cargo.toml  plugin.toml
plugins/bookmark/src/: bookmark.rs  canonical.rs  frontmatter.rs  main.rs  store.rs
plugins/calendar/: Cargo.toml  plugin.toml  triggers.example.toml
plugins/calendar/src/: config.rs  event.rs  gcal.rs  main.rs  oauth.rs  poller.rs  store.rs
plugins/discord/: Cargo.toml  panel.html  plugin.toml  triggers.example.toml
plugins/discord/src/: api.rs  config.rs  events.rs  gateway.rs  main.rs  store.rs
plugins/echo/: Cargo.toml  plugin.toml
plugins/echo/src/: main.rs
plugins/git/: Cargo.toml  plugin.toml  triggers.example.toml
plugins/git/src/: config.rs  git.rs  main.rs
plugins/jira/: Cargo.toml  plugin.toml  triggers.example.toml
plugins/jira/src/: config.rs  event.rs  jira.rs  main.rs  poller.rs  store.rs
plugins/kb/: Cargo.toml  plugin.toml
plugins/kb/src/: kb.rs  main.rs
plugins/llm/: Cargo.toml  plugin.toml  triggers.example.toml
plugins/llm/src/: anthropic.rs  config.rs  main.rs  store.rs  usage.rs
plugins/slack/: Cargo.toml  panel.html  plugin.toml  triggers.example.toml
plugins/slack/src/: config.rs  events.rs  main.rs  socket_mode.rs  store.rs
plugins/todo/: Cargo.toml  panel.html  plugin.toml  triggers.example.toml
plugins/todo/src/: config.rs  loop_prompt.rs  loop_prompt_template.txt  main.rs  prompt.rs  store.rs  todo.rs  watcher.rs
scripts/: build-icons.sh  install-dev.sh  install-macos.sh  install-plugins.sh
turm-cli/: Cargo.toml
turm-cli/src/: client.rs  commands.rs  main.rs  update.rs
turm-cli/src/plugin_cmds/: bookmark.rs  git.rs  mod.rs  todo.rs
turm-core/: Cargo.toml
turm-core/src/: action_registry.rs  condition.rs  config.rs  context.rs  error.rs  event_bus.rs  lib.rs  plugin.rs  protocol.rs  pty.rs  state.rs  theme.rs  trigger.rs
turm-core/tests/: socket_protocol.rs
turm-ffi/: Cargo.toml
turm-ffi/src/: lib.rs
turm-linux/: Cargo.toml  install.sh  turm.desktop
turm-linux/src/: app.rs  background.rs  dbus.rs  main.rs  panel.rs  plugin_panel.rs  search.rs  service_supervisor.rs  socket.rs  split.rs  statusbar.rs  tabs.rs  terminal.rs  webview.rs  window.rs
turm-macos/: Package.resolved  Package.swift  run.sh
turm-macos/Sources/CTurmFFI/include/: turm_ffi.h
turm-macos/Sources/Turm/: ActionRegistry.swift  AppDelegate.swift  BackgroundRotator.swift  ClaudeStart.swift  Config.swift  ConfigWatcher.swift  EventBus.swift  FFIBridge.swift  Keybindings.swift  PaneManager.swift  PluginSupervisor.swift  SocketServer.swift  SplitNode.swift  TabBarView.swift  TabViewController.swift  TerminalViewController.swift  Theme.swift  TurmApp.swift  TurmPanel.swift  WebViewController.swift
turm-plugin-bookmark/: Cargo.toml
turm-plugin-bookmark/src/: bookmark.rs  canonical.rs  frontmatter.rs  main.rs  store.rs
turm-plugin-discord/: Cargo.toml
turm-plugin-discord/src/: api.rs  config.rs  events.rs  gateway.rs  main.rs  store.rs
turm-plugin-echo/: Cargo.toml
turm-plugin-echo/src/: main.rs
turm-plugin-git/: Cargo.toml
turm-plugin-git/src/: config.rs  git.rs  main.rs
turm-plugin-llm/: Cargo.toml
turm-plugin-llm/src/: anthropic.rs  config.rs  main.rs  store.rs  usage.rs
turm-plugin-slack/src/: events.rs  main.rs  socket_mode.rs
turm-plugin-todo/: Cargo.toml
turm-plugin-todo/src/: config.rs  main.rs  prompt.rs  store.rs  todo.rs  watcher.rs
