[workspace]
resolver = "2"
members = [
    "turm-core",
    "turm-linux",
    "turm-cli",
    "turm-plugin-echo",
    "turm-plugin-kb",
    "turm-plugin-calendar",
    "turm-plugin-slack",
    "turm-plugin-llm",
    "turm-plugin-todo",
    "turm-plugin-git",
    "turm-plugin-discord",
    "turm-plugin-bookmark",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cross-platform custom terminal emulator"
repository = "https://github.com/marshall/turm"
