[workspace]
resolver = "2"
members = [
    "nestty-core",
    "nestty-linux",
    "nestty-cli",
    "nestty-ffi",
    "nestty-plugin-echo",
    "nestty-plugin-kb",
    "nestty-plugin-calendar",
    "nestty-plugin-slack",
    "nestty-plugin-llm",
    "nestty-plugin-todo",
    "nestty-plugin-git",
    "nestty-plugin-discord",
    "nestty-plugin-bookmark",
    "nestty-plugin-jira",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cross-platform custom terminal emulator"
repository = "https://github.com/marshallku/nestty"
