[workspace]
resolver = "2"
members = [
    "nestty-core",
    "nestty-linux",
    "nestty-cli",
    "nestty-ffi",
    "plugins/echo",
    "plugins/kb",
    "plugins/calendar",
    "plugins/slack",
    "plugins/llm",
    "plugins/todo",
    "plugins/git",
    "plugins/discord",
    "plugins/bookmark",
    "plugins/jira",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cross-platform custom terminal emulator"
repository = "https://github.com/marshallku/nestty"
