[package]
name = "custerm-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "custermctl"
path = "src/main.rs"

[dependencies]
custerm-core = { path = "../custerm-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
