[package]
name = "turm-linux"
version.workspace = true
edition.workspace = true

[[bin]]
name = "turm"
path = "src/main.rs"

[dependencies]
turm-core = { path = "../turm-core" }
gtk4 = { version = "0.9", features = ["gnome_46"] }
vte4 = { version = "0.8", features = ["v0_76"] }
serde_json = "1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
webkit6 = "0.4"
