[package]
name = "turm-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "turm"
path = "src/main.rs"

[dependencies]
turm-core = { path = "../turm-core" }
gtk4 = { version = "0.9", features = ["gnome_46"] }
vte4 = { version = "0.8", features = ["v0_76"] }
serde_json = "1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
webkit6 = "0.4"
javascriptcore6 = "0.4"
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
log = "0.4"
libc = "0.2"
tempfile = "3"
