[package]
name = "turm-plugin-bookmark"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "First-party bookmark plugin for turm — URL → KB note with auto-link to similar existing notes."
repository.workspace = true

[[bin]]
name = "turm-plugin-bookmark"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }
sha1 = "0.10"
url = "2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
