[package]
name = "turm-plugin-echo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mock service plugin for turm — verifies the protocol shape end-to-end."
repository.workspace = true

[[bin]]
name = "turm-plugin-echo"
path = "src/main.rs"

[dependencies]
serde_json = "1"
