[package]
name = "turm-plugin-todo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "First-party Todo service plugin for turm — markdown checkbox files at ~/docs/todos/<workspace>/<id>.md, file-as-source-of-truth, vim/git-edit compatible."
repository.workspace = true

[[bin]]
name = "turm-plugin-todo"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }

[dev-dependencies]
tempfile = "3"
