[package]
name = "nestty-plugin-bookmark"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "First-party bookmark plugin for nestty — URL → KB note with auto-link to similar existing notes."
repository.workspace = true

[[bin]]
name = "nestty-plugin-bookmark"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }
sha1 = "0.10"
url = "2"
libc = "0.2"
nestty-core = { path = "../../nestty-core" }

[dev-dependencies]
tempfile = "3"
