[package]
name = "nestty-plugin-discord"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "First-party Discord service plugin for nestty — connects via Gateway WebSocket, emits discord.message / discord.mention / discord.dm events."
repository.workspace = true

[[bin]]
name = "nestty-plugin-discord"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
tungstenite = { version = "0.24", default-features = false, features = [
    "handshake",
    "rustls-tls-webpki-roots",
] }
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "sync-secret-service",
    "crypto-rust",
] }
