[package]
name = "nestty-plugin-echo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mock service plugin for nestty — verifies the protocol shape end-to-end."
repository.workspace = true

[[bin]]
name = "nestty-plugin-echo"
path = "src/main.rs"

[dependencies]
serde_json = "1"
