[package]
name = "nestty-plugin-git"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "First-party git workspace + worktree plugin for nestty. Lightweight: no external API, just argv-vector shell-outs to `git`."
repository.workspace = true

[[bin]]
name = "nestty-plugin-git"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
