[package]
name = "nestty-plugin-jira"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "First-party Jira (Atlassian Cloud) service plugin for nestty — polls assigned/watched tickets and emits jira.ticket_assigned/status_changed/comment_added/mention; provides jira.list_my_tickets/get_ticket/create_ticket/transition/add_comment actions plus jira.auth_status."
repository.workspace = true

[[bin]]
name = "nestty-plugin-jira"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "sync-secret-service",
    "crypto-rust",
] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }

[dev-dependencies]
tempfile = "3"
