[package]
name = "nestty-plugin-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "First-party LLM service plugin for nestty — calls Anthropic Messages API via llm.complete, tracks token usage."
repository.workspace = true

[[bin]]
name = "nestty-plugin-llm"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "sync-secret-service",
    "crypto-rust",
] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
